[tool.poetry]
name = "khillion-utils"
version = "0.1.0"
description = "some utils to be reused for debugging"
authors = ["khillion <hillion.kenzo@posteo.net>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
